# partitionmanager

./: .arcconfig  .gitignore  .gitlab-ci.yml  .kde-ci.yml  BUGS  CHANGES  CMakeLists.txt  INSTALL  INSTALL.md  README  README.md  TODO
.reuse/: dep5
src/: CMakeLists.txt  Messages.sh  config.kcfg  config.kcfgc  main.cpp  open_in_partitionmanager.desktop  org.kde.PartitionManager.appdata.xml  org.kde.PartitionManager.desktop  org.kde.partitionmanager.appdata.xml  org.kde.partitionmanager.desktop  org.kde.partitionmanager.xml  partitionmanager.appdata.xml  partitionmanager.desktop  partitionmanager.in  partitionmanager.kcfg
src/backend/: CMakeLists.txt  corebackend.cpp  corebackend.h  corebackenddevice.cpp  corebackenddevice.h  corebackendmanager.cpp  corebackendmanager.h  corebackendpartition.cpp  corebackendpartition.h  corebackendpartitiontable.cpp  corebackendpartitiontable.h  libpartedbackend.cpp  libpartedbackend.h  libparteddevice.cpp  libparteddevice.h  libpartedpartition.cpp  libpartedpartitiontable.cpp  libpartedpartitiontable.h
src/backend/dummy/: CMakeLists.txt  dummybackend.cpp  dummydevice.cpp  dummypartition.cpp  dummypartitiontable.cpp  dummypartitiontable.h
src/backend/libparted/: libpartedbackend.cpp  libpartedbackend.h  libparteddevice.cpp  libparteddevice.h  libpartedpartition.cpp  libpartedpartitiontable.cpp
src/config/: CMakeLists.txt  advancedpagewidget.cpp  advancedpagewidget.h  configureoptionsdialog.cpp  configureoptionsdialog.h  configurepageadvanced.ui  configurepagefilesystemcolors.ui  configurepagegeneral.ui  filesystemcolorspagewidget.cpp  filesystemcolorspagewidget.h  generalpagewidget.cpp  generalpagewidget.h
src/core/: CMakeLists.txt  copysource.cpp  copysource.h  copysourcedevice.cpp  copysourcedevice.h  copysourcefile.cpp  copysourcefile.h  copysourcerandom.cpp  copysourcerandom.h  copysourceshred.cpp  copysourceshred.h  copytarget.cpp  copytarget.h  copytargetdevice.cpp  copytargetdevice.h  copytargetfile.cpp  copytargetfile.h  corebackend.cpp  corebackend.h  device.cpp  device.h  devicescanner.cpp  devicescanner.h  libparted.cpp  libparted.h  libpartedbackend.cpp  libpartedbackend.h  mountentry.cpp  mountentry.h  operationrunner.cpp  operationrunner.h  operationstack.cpp  operationstack.h  partition.cpp  partition.h  partitionalignment.cpp  partitionalignment.h  partitionnode.cpp  partitionnode.h  partitionrole.cpp  (+7 more)
src/fs/: CMakeLists.txt  btrfs.cpp  btrfs.h  exfat.cpp  exfat.h  ext2.cpp  ext2.h  ext3.cpp  ext3.h  ext4.cpp  ext4.h  extended.cpp  extended.h  fat16.cpp  fat16.h  fat32.cpp  fat32.h  filesystem.cpp  filesystem.h  filesystemfactory.cpp  filesystemfactory.h  hfs.cpp  hfs.h  hfsplus.cpp  hfsplus.h  hpfs.cpp  hpfs.h  jfs.cpp  jfs.h  linuxswap.cpp  linuxswap.h  luks.cpp  luks.h  lvm2_pv.cpp  lvm2_pv.h  nilfs2.cpp  nilfs2.h  ntfs.cpp  ntfs.h  ocfs2.cpp  (+15 more)
src/gui/: CMakeLists.txt  applyprogressdetailswidget.cpp  applyprogressdetailswidget.h  applyprogressdetailswidgetbase.ui  applyprogressdialog.cpp  applyprogressdialog.h  applyprogressdialogwidget.cpp  applyprogressdialogwidget.h  applyprogressdialogwidgetbase.ui  configureoptionsdialog.cpp  configureoptionsdialog.h  configurepageadvanced.ui  configurepagefilesystemcolors.ui  configurepagegeneral.ui  createpartitiontabledialog.cpp  createpartitiontabledialog.h  createpartitiontablewidget.cpp  createpartitiontablewidget.h  createpartitiontablewidgetbase.ui  createvolumedialog.cpp  createvolumedialog.h  createvolumegroupdialog.cpp  createvolumegroupdialog.h  createvolumewidget.cpp  createvolumewidget.h  createvolumewidgetbase.ui  decryptluksdialog.cpp  decryptluksdialog.h  decryptluksdialogwidget.cpp  decryptluksdialogwidget.h  decryptluksdialogwidgetbase.ui  devicepropsdialog.cpp  devicepropsdialog.h  devicepropswidget.cpp  devicepropswidget.h  devicepropswidgetbase.ui  editmountoptionsdialog.cpp  editmountoptionsdialog.h  editmountoptionsdialogwidget.cpp  editmountoptionsdialogwidget.h  (+90 more)
src/jobs/: CMakeLists.txt  backupfilesystemjob.cpp  backupfilesystemjob.h  checkfilesystemjob.cpp  checkfilesystemjob.h  copyfilesystemjob.cpp  copyfilesystemjob.h  createfilesystemjob.cpp  createfilesystemjob.h  createpartitionjob.cpp  createpartitionjob.h  createpartitiontablejob.cpp  createpartitiontablejob.h  deletefilesystemjob.cpp  deletefilesystemjob.h  deletepartitionjob.cpp  deletepartitionjob.h  job.cpp  job.h  movefilesystemjob.cpp  movefilesystemjob.h  resizefilesystemjob.cpp  resizefilesystemjob.h  restorefilesystemjob.cpp  restorefilesystemjob.h  setfilesystemlabeljob.cpp  setfilesystemlabeljob.h  setpartflagsjob.cpp  setpartflagsjob.h  setpartgeometryjob.cpp  setpartgeometryjob.h  shredfilesystemjob.cpp  shredfilesystemjob.h
src/kcm/: kcm_partitionmanager.desktop  partitionmanagerkcm.cpp  partitionmanagerkcm.h  partitionmanagerkcmbase.ui
src/kpart/: partitionmanagerpart.cpp  partitionmanagerpart.desktop  partitionmanagerpart.h  partitionmanagerpart.rc
src/kpart/test/: CMakeLists.txt  kparttest.cpp  kparttest.h  kparttestui.rc  main.cpp
src/ops/: CMakeLists.txt  backupoperation.cpp  backupoperation.h  checkoperation.cpp  checkoperation.h  copyoperation.cpp  copyoperation.h  createfilesystemoperation.cpp  createfilesystemoperation.h  createpartitiontableoperation.cpp  createpartitiontableoperation.h  deleteoperation.cpp  deleteoperation.h  newoperation.cpp  newoperation.h  operation.cpp  operation.h  resizeoperation.cpp  resizeoperation.h  restoreoperation.cpp  restoreoperation.h  setfilesystemlabeloperation.cpp  setfilesystemlabeloperation.h  setpartflagsoperation.cpp  setpartflagsoperation.h
src/plugins/: CMakeLists.txt  pmcorebackendplugin.desktop
src/plugins/dummy/: CMakeLists.txt  dummybackend.cpp  dummybackend.h  dummydevice.cpp  dummydevice.h  dummypartition.cpp  dummypartition.h  (+3 more)
src/util/: CMakeLists.txt  capacity.cpp  capacity.h  externalcommand.cpp  externalcommand.h  globallog.cpp  globallog.h  guihelpers.cpp  guihelpers.h  helpers.cpp  helpers.h  htmlreport.cpp  htmlreport.h  libpartitionmanagerexport.h  libpartitionmanagerguiexport.h  report.cpp  report.h
(+255 files in other folders)
